--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: blank # the website title (if blank, full name will be used instead)
 first_name: IICCSSS
 middle_name:
 last_name:
-email:
+email: info@iiccsss.org
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   International Interdisciplinary Computational Cognitive Science Summer School
 footer_text: >
@@ -18,7 +18,7 @@ keywords: cognitive-science, summer-school  # add your own keywords or leave emp
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: 🧠 # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
-url: https://iiccsss.github.io # the base hostname & protocol for your site
+url: https://www.iiccsss.org # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/
 last_updated: true # set to true if you want to display last updated in the footer
 impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
