--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,6 @@ description: > # the ">" symbol means to ignore newlines until "footer_text:"
   International Interdisciplinary Computational Cognitive Science Summer School
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
-  Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
   Front page photo from <a href="https://unsplash.com/photos/biClFIGKHqI" target="_blank">Unsplash</a>.
 keywords: cognitive-science, summer-school  # add your own keywords or leave empty
 
@@ -74,7 +73,7 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 github_username: # your GitHub user name
 gitlab_username: # your GitLab user name
 twitter_username: iiccsss2023 # your Twitter handle
-mastodon_username: sigmoid.social/@iiccsss # your mastodon instance+username in the format instance.tld/@username
+mastodon_username: neuromatch.social/@iiccsss # your mastodon instance+username in the format instance.tld/@username
 linkedin_username: # your LinkedIn user name
 telegram_username: # your Telegram user name
 scholar_userid: # your Google Scholar ID
