--- a/_config.yml
+++ b/_config.yml
@@ -72,6 +72,7 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 github_username: # your GitHub user name
 gitlab_username: # your GitLab user name
 twitter_username: iiccsss2023 # your Twitter handle
+bluesky_username: iiccsss # Bluesky handle
 mastodon_username: neuromatch.social/@iiccsss # your mastodon instance+username in the format instance.tld/@username
 linkedin_username: # your LinkedIn user name
 telegram_username: # your Telegram user name
