--- a/.github/workflows/broken-links.yml
+++ b/.github/workflows/broken-links.yml
@@ -39,14 +39,34 @@ on:
       - "!lighthouse_results/**"
 
 jobs:
-  link-checker:
+  build-and-check-links:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.1'
+          bundler-cache: true
+
+      - name: Install dependencies
+        run: bundle install
+
+      - name: Build site
+        run: bundle exec jekyll build
 
       - name: Link Checker 🔗
         uses: lycheeverse/lychee-action@v2.1.0
         with:
           fail: true
-          # removed md files that include liquid tags
-          args: --user-agent 'curl/7.54' --exclude-path README.md --exclude-path CUSTOMIZE.md --exclude-path _pages/404.md --exclude-path _pages/blog.md --exclude-path _posts/2018-12-22-distill.md --exclude-path _posts/2023-04-24-videos.md --exclude-path _books/the_godfather.md --exclude-path _includes/speaker.html --exclude-path _includes/speaker_horizontal.html --verbose --no-progress './**/*.md' './**/*.html'
+          args: --user-agent 'curl/7.54' --verbose --no-progress ./_site/**/*.html
+
+      # - name: Link Checker 🔗
+      #   uses: lycheeverse/lychee-action@v2.1.0
+      #   with:
+      #     fail: true
+      #     # removed md files that include liquid tags
+      #    args: --user-agent 'curl/7.54' --exclude-path README.md --exclude-path CUSTOMIZE.md --exclude-path _pages/404.md --exclude-path _pages/blog.md --exclude-path _posts/2018-12-22-distill.md --exclude-path _posts/2023-04-24-videos.md --exclude-path _books/the_godfather.md --exclude-path _includes/speaker.html --exclude-path _includes/speaker_horizontal.html --verbose --no-progress './**/*.md' './**/*.html'
