--- a/.github/workflows/broken-links.yml
+++ b/.github/workflows/broken-links.yml
@@ -2,71 +2,76 @@ name: Check for broken links
 
 on:
   push:
-    branches:
-      - master
-      - main
+    branches: [main, master]
     paths:
       - "assets/**"
+      - "_sass/**"
+      - "**.bib"
       - "**.html"
       - "**.js"
       - "**.liquid"
       - "**/*.md"
       - "**.yml"
-      - "!.github/workflows/axe.yml"
-      - "!.github/workflows/deploy-docker-tag.yml"
-      - "!.github/workflows/deploy-image.yml"
-      - "!.github/workflows/docker-slim.yml"
-      - "!.github/workflows/lighthouse-badger.yml"
-      - "!.github/workflows/prettier.yml"
+      - "Gemfile"
+      - "Gemfile.lock"
       - "!lighthouse_results/**"
+      - "!.github/workflows/**"
+      - "!README.md"
+      - "!INSTALL.md"
+      - "!FAQ.md"
+      - "!CUSTOMIZE.md"
+      - "!CONTRIBUTING.md"
+
   pull_request:
-    branches:
-      - master
-      - main
+    branches: [main, master]
     paths:
       - "assets/**"
+      - "_sass/**"
+      - "**.bib"
       - "**.html"
       - "**.js"
       - "**.liquid"
       - "**/*.md"
       - "**.yml"
-      - "!.github/workflows/axe.yml"
-      - "!.github/workflows/deploy-docker-tag.yml"
-      - "!.github/workflows/deploy-image.yml"
-      - "!.github/workflows/docker-slim.yml"
-      - "!.github/workflows/lighthouse-badger.yml"
-      - "!.github/workflows/prettier.yml"
+      - "Gemfile"
+      - "Gemfile.lock"
       - "!lighthouse_results/**"
+      - "!.github/workflows/**"
+      - "!README.md"
+      - "!INSTALL.md"
+      - "!FAQ.md"
+      - "!CUSTOMIZE.md"
+      - "!CONTRIBUTING.md"
 
 jobs:
-  build-and-check-links:
+  check-links:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout 🛎️
         uses: actions/checkout@v4
 
-      - name: Set up Ruby
+      - name: Setup Ruby 💎
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.1'
+          ruby-version: "3.3.5"
           bundler-cache: true
 
-      - name: Install dependencies
-        run: bundle install
+      - name: Setup Python 🐍
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.13"
+          cache: "pip"
 
-      - name: Build site
-        run: bundle exec jekyll build
+      - name: Install dependencies and build site 🔧
+        run: |
+          sudo apt-get update && sudo apt-get install -y imagemagick
+          pip3 install --upgrade nbconvert
+          export JEKYLL_ENV=production
+          bundle exec jekyll build
 
-      - name: Link Checker 🔗
+      - name: Check for broken links 🔗
         uses: lycheeverse/lychee-action@v2.1.0
         with:
           fail: true
           args: --user-agent 'curl/7.54' --verbose --no-progress ./_site/**/*.html
-
-      # - name: Link Checker 🔗
-      #   uses: lycheeverse/lychee-action@v2.1.0
-      #   with:
-      #     fail: true
-      #     # removed md files that include liquid tags
-      #    args: --user-agent 'curl/7.54' --exclude-path README.md --exclude-path CUSTOMIZE.md --exclude-path _pages/404.md --exclude-path _pages/blog.md --exclude-path _posts/2018-12-22-distill.md --exclude-path _posts/2023-04-24-videos.md --exclude-path _books/the_godfather.md --exclude-path _includes/speaker.html --exclude-path _includes/speaker_horizontal.html --verbose --no-progress './**/*.md' './**/*.html'
