fix broken bluesky link

--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -8,7 +8,7 @@
 
 # x_username: iiccsss2024 # your Twitter handle # I think we still have the account but no longer using
 email: info@iiccsss.org
-bluesky_url: iiccsss # Bluesky handle
+bluesky_url: https://bsky.app/profile/iiccsss.bsky.social # Bluesky handle
 mastodon_username: neuromatch.social/@iiccsss # your mastodon instance+username in the format instance.tld/@username
 youtube_id: computationalcognitivescie5410 # your youtube channel id (youtube.com/@<youtube_id>)
 # github_username: # your GitHub user name
